--- a/index.html
+++ b/index.html
@@ -2,75 +2,156 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Solicitud de Viaje</title>
-  <script src="https://unpkg.com/adaptivecards/dist/adaptivecards.min.js"></script>
+  <title>Solicitud de Viaje de Negocios</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f6f8;
+      display: flex;
+      justify-content: center;
+      padding: 50px 0;
+    }
+
+    .form-container {
+      background-color: #fff;
+      padding: 25px 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      width: 400px;
+    }
+
+    .form-container h1 {
+      text-align: center;
+      color: #0078D4;
+      margin-bottom: 20px;
+    }
+
+    .form-group {
+      margin-bottom: 15px;
+    }
+
+    .form-group label {
+      display: block;
+      margin-bottom: 5px;
+      font-weight: bold;
+    }
+
+    .form-group input[type="text"],
+    .form-group input[type="date"],
+    .form-group textarea {
+      width: 100%;
+      padding: 8px 10px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 14px;
+    }
+
+    .form-group input[type="checkbox"] {
+      margin-right: 5px;
+    }
+
+    textarea {
+      resize: vertical;
+      min-height: 60px;
+    }
+
+    button {
+      width: 100%;
+      padding: 10px;
+      background-color: #0078D4;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      font-size: 16px;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+
+    button:hover {
+      background-color: #005a9e;
+    }
+  </style>
 </head>
 <body>
-  <h1>Solicitud de Viaje de Negocios</h1>
-  <div id="cardContainer"></div>
+  <div class="form-container">
+    <h1>Solicitud de Viaje</h1>
+    <form id="viajeForm">
+      <div class="form-group">
+        <label for="titulo">Título del viaje</label>
+        <input type="text" id="titulo" name="titulo" required>
+      </div>
+
+      <div class="form-group">
+        <label for="fechaInicio">Fecha de inicio</label>
+        <input type="date" id="fechaInicio" name="fechaInicio" required>
+      </div>
+
+      <div class="form-group">
+        <label for="fechaFin">Fecha de fin</label>
+        <input type="date" id="fechaFin" name="fechaFin" required>
+      </div>
+
+      <div class="form-group">
+        <label for="destino">Destino del viaje</label>
+        <input type="text" id="destino" name="destino" required>
+      </div>
+
+      <div class="form-group">
+        <input type="checkbox" id="equipoEmpresa" name="equipoEmpresa">
+        <label for="equipoEmpresa" style="display:inline;">Usaré equipo de la empresa</label>
+      </div>
+
+      <div class="form-group">
+        <input type="checkbox" id="vpn" name="vpn">
+        <label for="vpn" style="display:inline;">Necesito VPN</label>
+      </div>
+
+      <div class="form-group">
+        <input type="checkbox" id="dispositivoMovil" name="dispositivoMovil">
+        <label for="dispositivoMovil" style="display:inline;">Necesito dispositivo móvil</label>
+      </div>
+
+      <div class="form-group">
+        <label for="comentarios">Comentarios</label>
+        <textarea id="comentarios" name="comentarios"></textarea>
+      </div>
+
+      <button type="submit">Enviar Solicitud</button>
+    </form>
+  </div>
 
   <script>
-    const flujoUrl = "https://default19685a3e7dde400fbbf3c8cdd7e1c9.6e.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/591849a8622c4924a6dd86506b16484e/triggers/manual/paths/invoke?api-version=1&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=lWQgocZSXXq7MBtu3wfEK0As4Qf62-evZySI_qKWgQM"; // Pega la URL de tu flujo HTTP (GET)
+    const flujoUrl = "AQUÍ_VA_LA_URL_DE_TU_FLUJO"; // Reemplaza con tu URL de Power Automate (GET)
 
-    const card = {
-      "type": "AdaptiveCard",
-      "$schema": "https://adaptivecards.io/schemas/adaptive-card.json",
-      "version": "1.5",
-      "body": [
-        { "type": "TextBlock", "text": "Solicitud de Viaje", "weight": "Bolder", "size": "Medium" },
-        { "type": "Input.Text", "id": "titulo", "placeholder": "Título del viaje" },
-        { "type": "Input.Date", "id": "fechaInicio", "placeholder": "Fecha de inicio" },
-        { "type": "Input.Date", "id": "fechaFin", "placeholder": "Fecha de fin" },
-        { "type": "Input.Text", "id": "destino", "placeholder": "Destino del viaje" },
-        { "type": "Input.Toggle", "title": "Usaré equipo de la empresa", "id": "equipoEmpresa" },
-        { "type": "Input.Toggle", "title": "Necesito VPN", "id": "vpn" },
-        { "type": "Input.Toggle", "title": "Necesito dispositivo móvil", "id": "dispositivoMovil" },
-        { "type": "Input.Text", "id": "comentarios", "placeholder": "Comentarios" }
-      ],
-      "actions": [
-        {
-          "type": "Action.Submit",
-          "title": "Enviar",
-          "data": { "accion": "enviarSolicitud" }
-        }
-      ]
-    };
+    document.getElementById("viajeForm").addEventListener("submit", async function(e){
+      e.preventDefault();
 
-    const adaptiveCard = new AdaptiveCards.AdaptiveCard();
-    adaptiveCard.parse(card);
+      const params = new URLSearchParams({
+        titulo: document.getElementById("titulo").value,
+        fechaInicio: document.getElementById("fechaInicio").value,
+        fechaFin: document.getElementById("fechaFin").value,
+        destino: document.getElementById("destino").value,
+        equipoEmpresa: document.getElementById("equipoEmpresa").checked,
+        vpn: document.getElementById("vpn").checked,
+        dispositivoMovil: document.getElementById("dispositivoMovil").checked,
+        comentarios: document.getElementById("comentarios").value
+      });
 
-    adaptiveCard.onExecuteAction = async function(action) {
-      if(action.data.accion === "enviarSolicitud") {
-        // Convertir todos los campos a query params
-        const params = new URLSearchParams({
-          titulo: adaptiveCard.getInputValue("titulo"),
-          fechaInicio: adaptiveCard.getInputValue("fechaInicio"),
-          fechaFin: adaptiveCard.getInputValue("fechaFin"),
-          destino: adaptiveCard.getInputValue("destino"),
-          equipoEmpresa: adaptiveCard.getInputValue("equipoEmpresa"),
-          vpn: adaptiveCard.getInputValue("vpn"),
-          dispositivoMovil: adaptiveCard.getInputValue("dispositivoMovil"),
-          comentarios: adaptiveCard.getInputValue("comentarios")
+      try {
+        const response = await fetch(`${flujoUrl}?${params.toString()}`, {
+          method: "GET"
         });
 
-        try {
-          const response = await fetch(`${flujoUrl}?${params.toString()}`, {
-            method: "GET"
-          });
-
-          if(response.ok) alert("Solicitud enviada correctamente!");
-          else {
-            alert("Error al enviar la solicitud.");
-            console.error(await response.text());
-          }
-        } catch(err) {
-          alert("Error de conexión al enviar la solicitud.");
-          console.error(err);
+        if(response.ok) alert("Solicitud enviada correctamente!");
+        else {
+          alert("Error al enviar la solicitud.");
+          console.error(await response.text());
         }
+      } catch(err) {
+        alert("Error de conexión al enviar la solicitud.");
+        console.error(err);
       }
-    };
-
-    document.getElementById("cardContainer").appendChild(adaptiveCard.render());
+    });
   </script>
 </body>
 </html>
