--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Solicitud de Viaje de Negocios</title>
+  <title>Solicitud de Viaje de NegociosS</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -58,7 +58,7 @@
     button {
       width: 100%;
       padding: 10px;
-      background-color: #0078D4;
+      background-color: #00407B;
       color: white;
       border: none;
       border-radius: 6px;
@@ -68,7 +68,7 @@
     }
 
     button:hover {
-      background-color: #005a9e;
+      background-color: #00407B;
     }
   </style>
 </head>
@@ -121,7 +121,7 @@
   </div>
 
   <script>
-    const flujoUrl = "AQUÍ_VA_LA_URL_DE_TU_FLUJO"; // Reemplaza con tu URL de Power Automate (GET)
+    const flujoUrl = "https://default19685a3e7dde400fbbf3c8cdd7e1c9.6e.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/591849a8622c4924a6dd86506b16484e/triggers/manual/paths/invoke?api-version=1&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=lWQgocZSXXq7MBtu3wfEK0As4Qf62-evZySI_qKWgQM"; // Reemplaza con tu URL de Power Automate (GET)
 
     document.getElementById("viajeForm").addEventListener("submit", async function(e){
       e.preventDefault();
